# chess

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
_codeql_build_dir/src/: chess
include/: defines.hpp  defs.hpp  pch.hpp
include/chess/: bitboard.hpp  board.hpp  concepts.hpp  hash.hpp  io.hpp  misc.hpp  move.hpp  movegen.hpp  polybook.hpp  result.hpp  search.hpp  search_info.hpp  types.hpp  uci.hpp  validate.hpp  xboard.hpp
include/chess/internal/: data.hpp  init.hpp
src/: CMakeLists.txt  bitboard.cpp  init.cpp  main.cpp
src/chess/: bitboard.cpp  board.cpp  hash.cpp  misc.cpp  movegen.cpp  polybook.cpp  search.cpp  uci.cpp  xboard.cpp
src/chess/internal/: data.cpp  init.cpp
